--- a/Slides/Class 12.qmd
+++ b/Slides/Class 12.qmd
@@ -16,5 +16,377 @@ slide-level: 3
 ---
 
 ```{r setup, include=FALSE }
-knitr::opts_chunk$set(echo = TRUE, message=FALSE, warning=FALSE)
+knitr::opts_chunk$set(echo = FALSE, message=FALSE, warning=FALSE)
 ```
+
+```{r, include=FALSE}
+library(tidyverse)
+library(huxtable)
+library(kableExtra)
+library(fixest)
+library(broom)
+```
+
+## Difference in differences: basic intuition
+
+-   Slightly tweaking the traditional counterfactual, DiD asks: "what would happen to the *trend* for this unit had it never received the treatment?"
+
+    -   How would your rate of growth change if you ate more vegetables?
+
+    -   What would happen to inflation if the federal reserve lowered interest rates?
+
+    -   How would the Arab Spring have unfolded if participants lacked access to cell phones and social media?
+
+## Difference in differences model
+
+-   Probably the oldest non-experimental method of causal inference (likely dates back to 1855)
+
+-   Units must be observed before and after the "treatment", so most commonly applied to panel data.
+
+-   If assumptions are met, can control for both observed and unobserved confounding.
+
+## John Snow and the London Cholera epidemic
+
+-   1854 Broad Street Cholera outbreak killed over 600 people in a poor district of London. What caused the outbreak?
+
+-   What causes Cholera in general?
+
+-   What interventions work?
+
+### Miasma theory
+
+::::: columns
+::: {.column width="50%"}
+> The immediate and chief cause of diseases is atmospheric impurity arising from decomposing remnants of the substances used for food and from the impurities given out from their own bodies. (Neil Arnott, 1844)
+
+<p class="fragment">
+
+Snow, however, found the initial outbreak was clustered around a single water pump on Broad Street. (73 of 83 initial deaths nearer to the Broad Street pump than any other)
+
+</p>
+:::
+
+::: {.column width="50%"}
+![Snow's map of Cholera outbreaks](https://blog.rtwilson.com/wp-content/uploads/2012/01/SnowMap_Points.png)
+:::
+:::::
+
+::: notes
+The exceptions to this were themselves more consistent with water-borne transmission than either person-to-person contact or miasma. One woman who lived far away from the outbreak traveled to the Broad street pump because she liked the taste. A brewery and a workhouse in the area had few cases but were connected to a separate water supply etc.
+:::
+
+### The transmission of Cholera
+
+Largely at Snow's behest, the pump's handle was removed, and the epidemic subsided, but does this tell us much? Outbreaks tend to subside!
+
+::: notes
+This is a problem with studying basically any public health intervention: epidemics tend to subside. Outbreaks will cause all sorts of behavioral changes, and eventually diseases will either run out of people to infect or just become less deadly. So the "before" vs "after" picture alone isn't really sufficient.
+:::
+
+### Southwark and Vauxhall
+
+:::::: columns
+::: {.column width="50%"}
+-   Southwark and Vauxhall water company supplied 40,000+ homes from a reservoir that drew directly from the Thames
+
+-   Supply had a well-established reputation for being...gross.
+:::
+
+:::: {.column width="50%"}
+::: fragment
+![](https://coimages.sciencemuseumgroup.org.uk/images/138/medium_1975_0462__0002_.jpg)
+
+John Edwards "Sovereign of scented streams"
+:::
+::::
+::::::
+
+### Lambeth waterworks
+
+::::: columns
+::: {.column width="50%"}
+Lambeth waterworks, while it also drew from the Thames, moved their reservoir far upstream of the city in 1852.
+:::
+
+::: {.column width="50%"}
+![](https://image1.slideserve.com/2445372/slide40-l.jpg)
+:::
+:::::
+
+### The natural experiment
+
++-----------------------------------+--------------------------------------------+--------------------------------------------+
+| **Water supply**                  | **Cholera deaths, 1849, rate per 100,000** | **Cholera deaths, 1854, rate per 100,000** |
++:==================================+:===========================================+:===========================================+
+| Southwark & Vauxhall Company only | 1349                                       | 1466                                       |
++-----------------------------------+--------------------------------------------+--------------------------------------------+
+| Lambeth Company Only              | 847                                        | 193                                        |
++-----------------------------------+--------------------------------------------+--------------------------------------------+
+
+### The natural experiment
+
+Note that the companies have different starting points (Lambeth was already cleaner even by 1849), but miasma theory might lead you to expect the same *trend.*
+
+```{r}
+library(tidyverse)
+df<-data.frame(
+  "year" =rep(c(1849, 1854), 2),
+  "company" = rep(c("Southwark & Vauxhall", "Lambeth"), each=2),
+  "deaths" = c(1349, 1466, 847, 193)
+  )
+
+ggplot(df, aes(x=year, y=deaths, color=company)) + 
+  geom_line(lwd=1) +
+  geom_point() +
+  theme_minimal() +
+  geom_vline(xintercept =1852, lty=2, color='red')
+
+```
+
+### The natural experiment
+
+If we can assume a parallel trend, then the relationship should look like this. The effect size, then, would be the difference between the counterfactual case and the observed case.
+
+```{r}
+
+library(tidyverse)
+df<-data.frame(
+  "year" =rep(c(1849,1852, 1854), 2),
+  "company" = rep(c("Southwark & Vauxhall", "Lambeth"), each=3),
+  "deaths" = c(1349,1419.2, 1466, 847,917.2, 193)
+  )
+
+cf<-data.frame(
+  "year" =c(1849,1852, 1854),
+  "company" = rep(c("Lambeth counterfactual"), each=3),
+  "deaths" = c(847,917.2, 964))
+
+
+ggplot(df, aes(x=year, y=deaths, color=company)) + 
+    geom_line(data=cf, aes(x=year, y=deaths), lty=2, color='black', lwd=.7)+
+  geom_line(lwd=1) +
+  geom_point() +
+  geom_vline(xintercept =1852, lty=2, color='red') +
+
+  theme_minimal() 
+
+```
+
+### The effect of moving pumps
+
++---------------------------------------------------------------+--------------------------------------------+--------------------------------------------+------------------------------------------------------------------+
+| **Water supply**                                              | **Cholera deaths, 1849, rate per 100,000** | **Cholera deaths, 1854, rate per 100,000** | **Difference in rates comparing 1854 to 1849, rate per 100,000** |
++:==============================================================+:===========================================+:===========================================+:=================================================================+
+| Southwark & Vauxhall Company only                             | 1349                                       | 1466                                       | 118                                                              |
++---------------------------------------------------------------+--------------------------------------------+--------------------------------------------+------------------------------------------------------------------+
+| Lambeth Company Only                                          | 847                                        | 193                                        | −653                                                             |
++---------------------------------------------------------------+--------------------------------------------+--------------------------------------------+------------------------------------------------------------------+
+| Difference-in-difference, Lambeth versus Southwark & Vauxhall | 502                                        | 1273                                       | ::: fragment                                                     |
+|                                                               |                                            |                                            | **−771**                                                         |
+|                                                               |                                            |                                            | :::                                                              |
++---------------------------------------------------------------+--------------------------------------------+--------------------------------------------+------------------------------------------------------------------+
+
+## The difference in difference estimator
+
+-   Answers the question "what would have happened to the treated units if they had not received the treatment" (average treatment effect on the treated or ATT)
+
+    -   i.e. "if Lambeth had not moved the reservoir upstream, there would have been a parallel increase in the number of cholera deaths among their customers"
+
+    -   But for \[the treatment\] the trends between treated and control units should be parallel
+
+    -   Does **not** require an assumption that observations are balanced on expected values of the outcome. Unobserved confounding only matters to the extent it impacts the trend.
+
+        -   Similar to fixed effects: all time-invariant characteristics are controlled.
+
+### Assumptions
+
+-   Parallel trends: lines would be parallel but for the treatment
+
+    -   Most important (and often the most difficult to justify)
+
+-   Exogeneity of treatment with respect to expected trends: treatment isn't a response to baseline outcome or expected outcomes.
+
+-   No spillover: untreated units aren't impacted by treatment.
+
+-   Stable groups: the before/after populations for each group are the same
+
+    -   For panel studies, this is guaranteed, but for repeated cross-sections this is a concern because people could leave or enter the groups at different times.
+
+### OLS as DiD
+
+For a simple 2-group x 2-time period DiD model, we can get this entire thing from a fairly simple OLS model:
+
+$$
+\hat{Y} = B_0 + B_1 \text{Time} + B_2\text{Treated}  + B_3\text{Time x Treated}
+$$
+
+<ol>
+
+<li class="fragment">
+
+$B_0$ The average for the control group at $T=0$
+
+</li>
+
+<li class="fragment">
+
+$B_1$ The average for the control group at $T=1$
+
+</li>
+
+<li class="fragment">
+
+$B_2$ The difference between the treated and control units at $T=0$
+
+</li>
+
+<li class="fragment">
+
+$B_3$ The difference in slopes for the treated group compared to the control group $T=1$
+
+</li>
+
+</ol>
+
+### Example
+
+```{r, echo=T}
+
+library(tidyverse)
+df<-data.frame(
+  "period" =factor(rep(c(0, 1), 2), labels=c("before", "after")),
+  "group" = factor(rep(c(0, 1), each=2), labels=c("control", "treatment")),
+  "deaths" = c(1349, 1466, 847, 193)
+  )
+
+model<-lm(deaths ~ period * group , data=df)
+
+tidy(model)|>
+  select(term, estimate)
+
+```
+
+### Interpretation
+
+In this setup, the interaction term represents our difference-in-difference estimate
+
+::::: columns
+::: {.column width="50%"}
+```{r}
+tidy(model)|>
+  select(term, estimate)
+
+```
+:::
+
+::: {.column width="50%"}
++------------------+-----------------+-----------------+----------------+
+| **Water supply** | **Deaths 1849** | **Deaths 1854** | 1854 - 1849    |
++:=================+:================+:================+:===============+
+| S & V            | 1349            | 1466            | 118            |
++------------------+-----------------+-----------------+----------------+
+| Lambeth          | 847             | 193             | −653           |
++------------------+-----------------+-----------------+----------------+
+| DiD              | 502             | 1273            | **−771**       |
++------------------+-----------------+-----------------+----------------+
+:::
+:::::
+
+### Two-Way Fixed Effects
+
+The two-way FE estimate can be generalized to multiple groups/multiple periods by using a fixed effect for each group/time in place of the indicator for control vs. treatment cases:
+
+$$
+\hat{Y}_{gt} = \alpha_g + \gamma_t +  \delta X_{gt} 
+$$ $$
+\alpha_g = \text{Group Fixed Effect}
+$$
+
+$$
+\gamma_t = \text{Time Fixed Effect}
+$$ $$
+\delta_{gt} = \text{Post Treatment Indicator}
+$$
+
+## Card and Krueger 1994
+
+-   Do minimum wage increases reduce employment? Reasonable expectation from classical economics, but empirical evidence is limited.
+-   Collected employment data before and after a minimum wage increase in New Jersey and compared to data from the same time periods for Pennsylvania
+
+. . .
+
+Results (reproduced by Angrist and Krueger)
+
+![](images/did_minimum_wage.png)
+
+## Including controls
+
+-   Parallel trends may only hold conditionally on some observed characteristic
+
+    -   For instance, maybe states that increase the minimum wage are more likely to already have a low supply of labor which leads to different growth trends in the future. In that case, you might want to include a measure of the labor supply in a state.
+
+-   Controls should be based on characteristics that do not change or were measured prior to treatment.
+
+    -   Card and Krueger include controls for region and franchise to account for compositional differences between PA vs NJ fast food workers.
+
+-   In practice, this is as simple as adding an additional control to a regression.
+
+### Staggered exposure
+
+```{r}
+#install.packages("did")
+library(did)
+data(mpdta)
+mpdta <- mpdta |>
+  mutate(treated = as.numeric(year >= first.treat & first.treat!=0))
+mpdta |>
+  mutate(countyreal = paste(countyreal)) |>
+  rename(countyid = countyreal) |>
+  select(year, countyid, first.treat, treated) |>
+  slice_head(n=10)|>
+  kbl(digits=3)|>
+  kable_classic()
+
+
+
+```
+
+### Staggered exposure
+
+```{r}
+
+mpdta|>
+  mutate(countyreal= factor(as.numeric(factor(countyreal))),
+         year=year,
+         treated  =case_when(first.treat!=0 & treated==1 ~  "treated", 
+                             .default ='not treated'),
+         
+         treat = case_when(first.treat==0 ~ "never treated", 
+                           .default ='eventually treated'
+                           )
+         )|>
+  ggplot(aes(y=reorder(countyreal, first.treat), x=year, fill=treated), 
+         color='white', alpha=.5) + 
+  geom_tile(color='lightgrey') +
+  ylab("") +
+  theme(axis.text.y = element_blank(),
+        axis.ticks.y=element_blank()
+        ) + 
+  facet_wrap(~treat, scales='free', nrow=1)  +
+  scale_fill_manual(values=c("#56B4E9", "#D55E00"))
+
+```
+
+### Staggered exposure
+
+Including multiple years and cases with staggered treatments can make it easier to justify the parallel trends assumption. "Eventually treated" units are often a more sensible comparison case for units that have been recently treated.
+
+However, there's an issue with "early treated" and "late treated" units being weighed differently in the results.
+
+## Considerations
+
+-   In general, it makes sense to just stick with the linear probability model, despite its flaws
+
+-   Simplest setup is the pre vs. post treatment cross-sectional case.
+
+-   Biggest assumption is the parallel trend. Visual examination can help, especially if you have observations for prior outcomes
